Sun Apr 22 17:53:07 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/structs.h, src/eval.c: MatrixRow tree node is also
	  used in expanding matrices, not just entering, so
	  gint16 was just not enough for width.  So can now
	  handle wider matrices in expansion.

Wed Apr 11 16:56:15 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/symbolic.c: fix derivatives of Im and Re to be the z
	  derivatives.

	* src/funclib.c, src/symbolic.c, help/C/gel-function-list.xml:
	  add the sinc function and its derivative.

Mon Apr 09 21:12:40 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/matop.c: forgotten nargs setting led to a crash when
	  adding fake conj.
	
	* src/compil.c, src/matop.c: correctly set uninitialized flag
	  for identifiers.

	* src/eval.[ch]: avoid some uninitialized compilation warnings.

Mon Apr 09 20:44:03 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c, src/structs.h: Store state of "uninitialized"
	  with identifier nodes so that we don't double warn of uninitialized
	  identifiers with something like "x+5"

Thu Mar 29 10:35:45 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c, src/eval.c, src/funclib.c, lib/*/*.gel: fix some
	  spelling and capitalization

	* help/C/gel-function-list.xml: fix spelling

	* combinatorics/recursive_sequences.gel: Fix LinearRecursiveSequence,
	  and also allow it to take matrix argument

	* src/geniustests.txt: add a few tests

	* help/C/*.xml: Fixes from Luc Pionchon that I totally forgot about
	  for 1.0.15

Wed Mar 28 17:08:55 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: fix possible uninitialized use when reading 
	  the compiled library (though it's code that never gets hit
	  unless the installed library gets corrupted)

	* NEWS: fix typos

Wed Mar 28 15:57:41 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: when running help and things are not documented and not
	  defined, don't output three lines saying so, just the one error will
	  do.
