@@ -1109,6 +1109,8 @@ prod n=1 to 20 do (A=randint(10,3,7)-4*ones(3,7);IsPositiveSemidefinite(A'*A))	t
 prod n=1 to 20 do (A=randint(10,7,7)-4*ones(7,7);(rank(A'*A) < 7) or IsPositiveDefinite(A'*A))	true
 sinc(0)==1							true
 sinc(5)==sin(5)/5						true
+A=[1;2];B=[3;4;5;6;7];[A,B,0,null,4]+""				"[1,3,0,4;2,4,0,4;1,5,0,4;2,6,0,4;1,7,0,4]"
+A=[1,2;3,4];B=[5;6;7];[A,B]+""					"[1,2,5;3,4,6;1,2,7]"
 load "nullspacetest.gel"					true
 load "longtest.gel"						true
 load "testprec.gel"						true
